# python-apps

./: LICENSE  README.md
ai/llm-chat-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
ai/llm-chat-server/src/: main.py
ai/llm-chat-server/src/config/: settings.py
ai/llm-chat-server/src/exceptions/: chat.py  llm.py  search.py
ai/llm-chat-server/src/llm/: llm_registry.py
ai/llm-chat-server/src/llm/models/: azure_gpt4o.py  azure_gpt4o_mini.py  base_llm.py  google_gemini2_flash.py  openai_gpt4o_mini.py
ai/llm-chat-server/src/prompts/: chat.py  search.py
ai/llm-chat-server/src/repositories/: chat.py
ai/llm-chat-server/src/respositories/: chat.py
ai/llm-chat-server/src/routers/v1/: chat.py  conversation.py  models.py
ai/llm-chat-server/src/schemas/: chat.py  conversation.py  llm.py  search.py
ai/llm-chat-server/src/search/: search_registry.py
ai/llm-chat-server/src/search/engines/: base_search.py  google_search.py
ai/llm-chat-server/src/services/: chat.py  conversation.py  web_rag.py
ai/llm-chat-server/src/utils/: decorators.py
fastapi-demo/: README.md  pyproject.toml
fastapi-demo/fastapi_demo/items/: __init__.py  models.py  routers.py
fastapi-demo/fastapi_demo/middlewares/: __init__.py  logging.py
fleeting-thoughts/: .gitignore  README.md  pyproject.toml  sample.json  schema.json
fleeting-thoughts/fleeting_thoughts/: cli.py  manager.py  models.py
fleeting-thoughts/tests/: test_manager.py
journal-bot/: README.md  journal_framework.md  pyproject.toml
journal-bot/data/entries/: sample_entry.json
journal-bot/docs/: act_framework1.md  act_framework2.md
journal-bot/journal_bot/: main.py
journal-bot/journal_bot/cli/: commands.py  prompts.py
journal-bot/journal_bot/core/: journal_entry.py
journal-bot/journal_bot/storage/: json_storage.py
journal-bot/schema/: journal_schema.json
journal-bot/schemas/: gratitude_joy.json
json-storage/json_storage/: service.py
learn-fastapi/: .env.sample  .gitignore  README.md  books.py  books2.py  pyproject.toml
learn-fastapi/todos_app/: database.py  main.py  models.py
learn-fastapi/todos_app/routers/: auth.py  todos.py
learn-fastmcp/: .gitignore  README.md  main.py  middleware.py  models.py  pyproject.toml
learn-fastmcp/todos/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
learn-fastmcp/todos/app/: api.py  config.py  main.py  mcp.py  middleware.py  schemas.py
learn-fastmcp/todos/app/database/: db.py  models.py  repository.py
learn-fastmcp/todos/app/services/: __init__.py  auth.py  todo.py
learning-journal/: README.md  sample.json  schema.json
notion-oauth-py/: .gitignore  README.md  cli.py  main.py  middleware.py  pyproject.toml
notion-oauth-py/notion_oauth/: __init__.py  models.py  router.py  service.py  storage.py
personal-log/: .gitignore  README.md  todo.md
personal-log/fleeting-thoughts/: README.md  schema.json  todo.md
personal-log/fleeting-thoughts/fleeting_thoughts/: storage.py
personal-log/intentions/: README.md  pyproject.toml  sample.json  schema.json
personal-log/learning-journal/: README.md  pyproject.toml  sample.json  schema.json
personal-log/learning-journal/entries/: 2025-02-20.json
personal-log/learning-journal/learning_journal/: cli.py  manager.py  models.py  storage.py
personal-log/main/: pyproject.toml
personal-log/main/data/: 2025_03_01.json  2025_03_02.json  2025_03_06.json  2025_03_07.json  2025_03_09.json  2025_03_10.json  2025_03_11.json  2025_03_13.json  2025_03_16.json  2025_03_24.json
personal-log/main/main/: main.py
personal-log/main/main/cli/: intentions_cli.py  journal_cli.py  learnings_cli.py  reflections_cli.py  thoughts_cli.py
personal-log/main/main/modules/intentions/: README.md  intentions_cli.py  model.py  sample.json  schema.json  service.py
personal-log/main/main/modules/learnings/: README.md  learnings_cli.py  model.py  sample.json  schema.json  service.py
personal-log/main/main/modules/reflections/: README.md  model.py  reflections_cli.py  sample.json  schema.json  service.py
personal-log/main/main/modules/thoughts/: README.md  model.py  sample.json  schema.json  service.py  thoughts_cli.py
personal-log/main/main/storage/: json_file_manager.py
personal-log/main/tests/: test_json_file_manager.py
personal-log/reflections/: README.md  pyproject.toml  sample.json  schema.json
prototypes/journal-bot/: LICENSE.txt  README.md  pyproject.toml
prototypes/journal-bot/data/: prompts.json
prototypes/journal-bot/journal_bot/: main.py
prototypes/journal-bot/journal_bot/core/: journal_entry.py
prototypes/journal-bot/schemas/: emotional_awareness.json  future_focused.json  growth_reflection.json
prototypes/json-storage/: README.md  pyproject.toml
prototypes/json-storage/json_storage/: main.py
prototypes/json-storage/test_data/: 2025_02_20.json
udemy/fastapi-demo/fastapi_demo/: main.py
udemy/fastapi-demo/fastapi_demo/items/: service.py
udemy/learn-fastapi/: books.py  main.py  pyproject.toml
