[project]
name = "notion-oauth-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.7",
    "cryptography>=46.0.5",
    "fastapi>=0.128.8",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "rich>=13.9.4",
    "uvicorn[standard]>=0.40.0",
]
