[project]
name = "main"
version = "0.1.0"
description = ""
authors = [
    {name = "sreeharsha-rav",email = "dev.sreeharsha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "main.main:main"
format = "poetry run black main tests && poetry run ruff format main tests"
lint = "poetry run ruff check main tests"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
black = "^25.1.0"