[project]
name = "main"
version = "0.1.0"
description = ""
authors = [
    {name = "sreeharsha-rav",email = "dev.sreeharsha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "rich (>=13.9.4,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
personal_log = "main.main:cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
black = "^25.1.0"
pytest = "^8.3.4"
