[project]
name = "json-storage"
version = "0.1.0"
description = ""
authors = [
    {name = "sreeharsha-rav",email = "dev.sreeharsha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
json-storage = "json_storage.main:main"